--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
             <div class="informacao selecionado" id="informacao-sobre-mim">
                 <h3 class="sub-titulo">Sobre</h3>
                 <div class="descricao">
-                    <p>Olá! Meu nome é Samantha. Seja bem-vindo(a) ao meu perfil!</p>
-                    <p>Sou uma pessoa curiosa, que aceita desafios e sou comprometida com as tarefas a serem desempenhadas. 
-                    Atualmente estou aprendendo as linguagens <span> HTML, CSS e JavaScritp</span>.
-                    Buscando uma mudança de carreira, para esse mundo incrível da programação!
-                    Meus Hobbies?! Adoro um happy hour, ler um bom livre e maratonar uma série.</p>
+                    <p> Olá!! Seja bem vindo(a) ao meu perfil!</p>
+
+                    <p> Me chamo Samantha Kniss. É um prazer!
+                        Hoje com 32 anos, estou buscando uma nova área, novos desafios e novos horizontes.
+                        Estou me reinventando e buscando uma oportunidade nessa área incrível da programação. 
+                        Atualmente estou cursando um técnico em Desenvolvimento Sistemas na instituição Senai. 
+                        E fazendo cursos simultaneamente de Fronted <span>HTML, CSS e JavaScript</span>. 
+                        De modo geral, sou proativa, trabalho bem em equipe e tenho muita vontade de aprender.
+                        Para mais informações ou contato, acesse abas "minhas redes".
+                    </p>
                 </div>
             </div>
             <div class="informacao" id="informacao-minhas-redes">
